1.0.4 - standardized README - Feather Falling EX's safe fall distance is now scaled per level (5 * level) - Fixed Fortune EX not actually multiplying loot - Temporarily removed Fortune EX's effect when mining Ancient Debris as it unintentionally caused an infinite Netherite mining (inflation is fixed!) - Fixed Looting EX not actually causing mobs to drop more loot or increasing rare drop odds - Fixed Fire Aspect EX not actually being applicable to axes - (Minecraft Comes Alive integration): Molten Ink, Nether Crystal Fragments, and Stamping Tables now have gift values, with higher values given to librarians and clerics. - Anvil mechanics have been adjusted; if the vanilla enchantment levelof the item-to-be-upgraded is above the maximum level, the EX enchantment will now inherit the level rather than limit it. Additionally, if the two levels are equal, the level increases by one, given that the levels are not above the maximum level.